Wizards: Fix Qt Unit test wizard

Remove unused define which lead to build errors if the build
directory contained white spaces.

Task-number: QTCREATORBUG-20047
Change-Id: Ieea4b61d6936479dfcd87714baed0854d4b4ced1
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>